
New features:
 * Support for tabs
 * Revamped bookmarks dialog
 * Revamped file properties dialog
 * One instance mode
 * User defined LS_COLORS colours
 * Enhanced file name matching in quick search
 * Open terminal with administrator privileges
 * Context popup menu for internal viewer
 * --config-dir command line option for customized location of config files
 * New or updated docs: cs, de, en, es, fr, sl
 * New or updated translations: cs, da, eo, es, eu, fr, hu, ko, nb, pl, pt_BR, ro, ru, sl, uk, zh_CN
 * New key bindings:
      CTRL+T         Open directory in a new tab (replaces the old Multi-Rename-Tool binding)
      CTRL+W         Close current tab
      CTRL+SHIFT+W   Close all tabs
      CTRL+TAB       Switch to the next tab
      CTRL+SHIFT+TAB Switch to the previous tab
      SUPER+1        Change left connection
      SUPER+2        Change right connection


===================================
gnome-commander 1.2.8.12
---------------

Bug fixes:
 * Fixed problem #649375 (bookmarks not updated for newly added ones)


===================================
gnome-commander 1.2.8.11
---------------

Bug fixes:
 * Fixed problem #639243 (misleading docs for F2 shortcut)
 * Fixed problem #640387 (usage of deprecated python modules: md5, sha1)
 * Fixed problem with starting GNOME Commander as root
 * Fixed problem with Traditional Chinese translation

New features:
 * Support for backward/forward mouse buttons


===================================
gnome-commander 1.2.8.10
---------------

Bug fixes:
 * Fixed problem #448941 (numeric keypad arrows don't work in the main window)
 * Fixed problem #620275 (add menu item to copy full path and file name to clipboard)
 * Fixed problem #637501 (advrename: metatag popup menu shows wrong items)
 * Fixed problem with toggling path/basename/filename selections in copy/move dialogs
 * Fixed problem with searching path for devices
 * Updated translations: de


===================================
gnome-commander 1.2.8.9