@@ -72,6 +72,7 @@ enum GnomeCmdColorMode
     GNOME_CMD_COLOR_CLASSIC,
     GNOME_CMD_COLOR_DEEP_BLUE,
     GNOME_CMD_COLOR_CAFEZINHO,
+    GNOME_CMD_COLOR_GREEN_TIGER,
     GNOME_CMD_COLOR_CUSTOM,
     GNOME_CMD_NUM_COLOR_MODES
 };
